# DjangoProject

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  docker-compose.yml  openapi-schema.yaml  otel-collector-config.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
backend/media/snapshots/: snap-1.csv  snap-10.csv  snap-2.csv  snap-3.csv  snap-4.csv  snap-5.csv  snap-6.csv  snap-7.csv  snap-8.csv  snap-9.csv
backend/src/accounts/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  urls_codes.py  urls_registration.py  urls_teachers.py  urls_users.py  views.py
backend/src/accounts/migrations/: 0001_initial.py  0002_add_researcher_profile_and_sudo_grant.py  0003_alter_user_username_registrationcode.py  0004_passwordresetrequest_passwordresetcode_and_more.py  0005_user_email_user_idx_user_email_user_uq_user_email.py  0006_registrationcode_archived_at_and_more.py  0007_registrationcode_hash_storage.py  0008_registrationcode_metadata.py  0009_remove_registrationcode_idx_registration_code_hash.py  0010_registrationcode_ck_course_binding.py
backend/src/accounts/services/: __init__.py  _auth.py  _password_reset.py  _registration.py  _roles.py  _sudo.py  _utils.py
backend/src/accounts/views/: __init__.py  auth.py  registration.py  staff.py  sudo.py  users.py
backend/src/assessments/: __init__.py  admin.py  apps.py  image_services.py  image_views.py  models.py  serializers.py  services.py  urls.py  views.py
backend/src/assessments/migrations/: 0001_initial.py  0002_rubric_cutover.py  0003_assessment_scoring_policy.py  0004_remove_moodmeterquestion_question_and_more.py  0005_assessment_status_field.py  0006_add_mood_meter_grading_mode.py  0007_assessment_archival_metadata.py  0008_alter_question_kind.py  0009_assessment_rubric.py  0010_alter_question_kind.py  0011_alter_assessment_status.py  0012_add_submission_mode.py
backend/src/assignment_templates/: __init__.py  admin.py  apps.py  image_services.py  image_views.py  models.py  serializers.py  services.py  urls.py  views.py
backend/src/assignment_templates/migrations/: 0001_initial.py  (+2 more)
backend/src/assignments/: __init__.py  admin.py  apps.py  image_services.py  image_views.py  models.py  serializers.py  services.py  urls.py  views.py
backend/src/config/: __init__.py  asgi.py  env.py  otel.py  settings.py  urls.py  wsgi.py
backend/src/core/: admin.py  apps.py  audit.py  authentication.py  dtos.py  errors.py  exception_handler.py  helpers.py  lifecycle.py  models.py  otel_exporter.py  pagination.py  parsers.py  permissions.py  throttles.py
backend/src/courses/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  urls_students.py  views.py  views_students.py
backend/src/exports/: __init__.py  apps.py  models.py  services.py  urls.py  views.py
backend/src/rubrics/: models.py  serializers.py  services.py  urls.py  views.py
backend/src/submissions/: __init__.py  admin.py  apps.py  image_services.py  image_views.py  models.py  serializers.py  services.py  storage.py  urls.py  views.py
backend/src/visualizations/: __init__.py  apps.py  serializers.py  services.py  urls.py  views.py
backend/tests/: README.md  __init__.py  conftest.py  factories.py
backend/tests/integration/: test_accounts_error_paths.py  test_accounts_routes.py  test_admin_api.py  test_admin_login_block.py  test_assessments_routes.py  test_assignment_templates_routes.py  test_assignments_errors.py  test_assignments_routes.py  test_auth_errors.py  test_auth_me.py  test_auth_reg_completion.py  test_auth_reset_issuance.py  test_auth_services.py  test_cleanup_reset_codes.py  test_course_enrollment_services.py  test_courses_routes.py  test_ensure_admin.py  test_environment.py  test_exports_routes.py  test_lifecycle_archival.py  test_model_clean.py  test_model_str.py  test_observability_routes.py  test_packages_routes.py  test_password_reset_services.py  test_permission_services.py  test_query_counts.py  test_registration_services.py  test_researcher_api.py  test_rubric_validation.py  test_rubrics_routes.py  test_seed_e2e.py  test_submission_images.py  test_submissions_errors.py  test_submissions_routes.py  test_sudo.py  test_sudo_constraints.py  test_sudo_grants_me.py  test_sudo_traceability.py  test_user_manager.py  (+5 more)
backend/tests/security/: test_authz_security.py  test_oauth_security.py  test_settings_security.py  test_throttle_security.py
backend/tests/unit/: conftest.py  test_infrastructure_contracts.py  test_manage_entrypoint.py
(+842 files in other folders)
