[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eel-backend"
version = "0.1.0"
description = "EEL Data Dashboard Backend - Django REST API"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "EE Lab Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.14,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "django-cors-headers>=4.3,<5.0",
    "django-filter>=24.0,<25.0",
    "psycopg[binary]>=3.1,<4.0",
    "dj-database-url>=2.1,<3.0",
    "python-dotenv>=1.0,<2.0",
    "gunicorn>=21.0,<23.0",
    "uvicorn[standard]>=0.27,<1.0",
    "whitenoise>=6.6,<7.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "google-auth>=2.27,<3.0",
    "google-auth-oauthlib>=1.2,<2.0",
    "opentelemetry-api>=1.23,<2.0",
    "opentelemetry-sdk>=1.23,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.23,<2.0",
    "opentelemetry-instrumentation-django>=0.45b0,<1.0",
    "opentelemetry-instrumentation-psycopg>=0.45b0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.7,<5.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "factory-boy>=3.3,<4.0",
    "faker>=22.0,<24.0",
    "httpx>=0.26,<1.0",
    "ruff>=0.2,<1.0",
    "black>=24.0,<25.0",
    "mypy>=1.8,<2.0",
    "django-stubs>=4.2,<6.0",
    "djangorestframework-stubs>=3.14,<4.0",
    "pre-commit>=3.6,<4.0",
    "bandit>=1.7,<2.0",
    "safety>=3.0,<4.0",
    "django-debug-toolbar>=5.0,<7.0",
    "django-extensions>=3.2,<4.0",
    "drf-spectacular>=0.27,<1.0",
    "pydot>=3.0,<5.0",
]
export = [
    "reportlab>=4.0,<5.0",
    "pandas>=2.1,<3.0",
    "openpyxl>=3.1,<4.0",
]

[project.urls]
Repository = "https://github.com/Znboston/EE-Lab-Personal"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
]
ignore = [
    "S101",   # assert allowed in tests
    "S104",   # binding to all interfaces (handled by deployment)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "E501"]
"src/**/migrations/*.py" = ["E501", "RUF012", "UP006", "UP035"]
"src/**/models.py" = ["RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "accounts", "courses", "assessments", "assignments", "submissions", "visualizations", "exports"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
# TODO: tighten to strict typing once module annotations are filled in.
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false
check_untyped_defs = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "-ra",
    "-vv",
    "--durations=20",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
    "slow: Slow tests",
    "workflow: Workflow integration tests",
    "workflow_admin: Admin workflow tests",
    "workflow_teacher: Teacher workflow tests",
    "workflow_student: Student workflow tests",
    "workflow_error: Workflow error-path tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true
